--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
       shell: pwsh
       run: |
         Set-PSRepository PSGallery -InstallationPolicy Trusted
-        Install-Module Az, PSDesiredStateConfiguration, GPRegistryPolicyDsc, NetworkingDsc -AllowClobber
+        Install-Module Az, PSDesiredStateConfiguration, GPRegistryPolicyDsc, NetworkingDsc, ComputerManagementDsc -AllowClobber
     - name: Publish module
       shell: pwsh
       run: |
